--- a/views/login.jade
+++ b/views/login.jade
@@ -1,10 +1,15 @@
-form(action='/login', method='post')
-  div
-    label Username:
-    input(type='text', name='username')
-    br
-  div
-    label Password:
-    input(type='password', name='password')
-  div
-    input(type='submit', value='Submit')
+extends ./structure/layout.jade
+
+block content
+  div.container.row(style="padding:40px;")
+    div.col-md-4.col-md-offset-4(style="border:solid; border-style:solid")
+      form(action='/login', method='post', style="padding:40px 20px 20px 20px")
+        div
+          label Username:
+          input(type='text', name='username')
+          br
+        div
+          label Password:
+          input(type='password', name='password')
+        div
+          input.btn.btn-info(type='submit', value='Submit')
