--- a/public/views/login.jade
+++ b/public/views/login.jade
@@ -1,6 +1,7 @@
 extends ./structure/layout.jade
 
 block content
+  include ./structure/navbar.jade
   div.container.row(style="padding:40px;")
     div.col-md-4.col-md-offset-4(style="border:solid; border-style:solid")
       form(action='/login', method='post', style="padding:40px 20px 20px 20px")
