--- a/public/views/structure/layout.jade
+++ b/public/views/structure/layout.jade
@@ -1,5 +1,5 @@
 html
-  link(rel="stylesheet", href="css/bootstrap.min.css")
+  link(rel="stylesheet", href="libs/bootstrap/dist/css/bootstrap.min.css")
   script(src="js/jquery.js")
   script(src="js/bootstrap.min.js")
 
