--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -17,3 +17,5 @@ block content
         | View your
         a(href='/profile')  profile
         | .
+  div.container
+    div(ng-include='', src="'views/partials/a.jade'")
