--- a/public/views/structure/layout.jade
+++ b/public/views/structure/layout.jade
@@ -1,7 +1,10 @@
-html
-  link(rel="stylesheet", href="libs/bootstrap/dist/css/bootstrap.min.css")
-  script(src="js/jquery.js")
-  script(src="js/bootstrap.min.js")
+html(ng-app="app")
+  script(src='libs/angular/angular.js')
+  script(src='libs/angular-bootstrap/ui-bootstrap-tpls.js')
+  script(src="js/appRoutes.js")
+  script(src="js/app.js")
+  link(href='libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+  link(href='css/custom.css', rel='stylesheet')
 
   body
     block content
