--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -18,4 +18,4 @@ block content
         a(href='/profile')  profile
         | .
   div.container
-    div(ng-include='', src="'views/partials/a.jade'")
+    include partials/a.jade
